Issue #SB-6079 fix: all my contents when multiple value is selected UI glitch is visible

--- a/src/app/client/src/styles.css
+++ b/src/app/client/src/styles.css
@@ -2986,6 +2986,9 @@ i.icon.accordion-content-right {
 .mr-40 {
   margin-right: 40px !important;
 }
+.mr-5 {
+  margin-right: 5px !important;
+}
 
 .fullpage .content {
   position: absolute;
